lab5/1/src/main.output
Terminals unused in grammar

   DOT
   RETURN
   ELSE_IF
   b_OR
   b_NOR
   b_NOT
   pre_SELF_ADD
   pre_SELF_SUB


状态 136 conflicts: 1 shift/reduce


语法

    0 $accept: program $end

    1 program: Type MAIN LPAREN RPAREN LBRACE fake_1 statements RBRACE

    2 fake_1: %empty

    3 statements: statement
    4           | statements statement

    5 statement: SEMICOLON
    6          | decl_stmt SEMICOLON
    7          | assign_stmt SEMICOLON
    8          | IO_stmt SEMICOLON
    9          | if_else_while_for_stmt
   10          | LBRACE fake_2 statements RBRACE

   11 fake_2: %empty

   12 expr: ID
   13     | INT_CONST
   14     | CHAR
   15     | STRING
   16     | BOOL
   17     | LPAREN expr RPAREN
   18     | expr ADD expr
   19     | expr SUB expr
   20     | expr MUL expr
   21     | expr DIV expr
   22     | expr MOD expr
   23     | SUB expr
   24     | expr AND expr
   25     | expr OR expr
   26     | NOT expr
   27     | expr LESS_EQ expr
   28     | expr LESS_THAN expr
   29     | expr MORE_EQ expr
   30     | expr MORE_THAN expr
   31     | expr NOT_EQ expr
   32     | expr EQ expr

   33 decl_stmt: Type ID ASSIGN expr
   34          | Type ID
   35          | decl_stmt COMMA ID ASSIGN expr
   36          | decl_stmt COMMA ID
   37          | Type MUL ID ASSIGN b_AND expr
   38          | Type MUL ID
   39          | Type b_AND ID ASSIGN ID

   40 assign_stmt: ID ASSIGN expr
   41            | ID ADD_ASSIGN expr
   42            | ID SUB_ASSIGN expr
   43            | ID MUL_ASSIGN expr
   44            | ID DIV_ASSIGN expr
   45            | expr SELF_ADD
   46            | expr SELF_SUB

   47 IO_stmt: PRINTF LPAREN STRING COMMA expr RPAREN
   48        | SCANF LPAREN STRING COMMA b_AND expr RPAREN

   49 for_expr_1: decl_stmt
   50           | assign_stmt
   51           | %empty

   52 for_expr_2: expr
   53           | %empty

   54 for_expr_3: assign_stmt
   55           | %empty

   56 if_else_while_for_stmt: IF LPAREN expr RPAREN statement
   57                       | IF LPAREN expr RPAREN statement ELSE statement
   58                       | WHILE LPAREN expr RPAREN statement
   59                       | FOR LPAREN for_expr_1 SEMICOLON for_expr_2 SEMICOLON for_expr_3 RPAREN statement

   60 Type: T_INT
   61     | T_CHAR
   62     | T_BOOL
   63     | T_VOID
   64     | CONST T_INT
   65     | CONST T_CHAR

   66 INT_CONST: INTEGER_H
   67          | INTEGER_D
   68          | INTEGER_O
   69          | INTEGER_B

   70 INTEGER_D: INTEGER_DP
   71          | INTEGER_DN

   72 ARRAY: IDENTIFIER LMPAREN INTEGER_DP RMPAREN
   73      | ARRAY LMPAREN INTEGER_DP RMPAREN

   74 ID: IDENTIFIER
   75   | ARRAY


Terminals, with rules where they appear

$end (0) 0
error (256)
T_INT (258) 60 64
T_CHAR (259) 61 65
T_BOOL (260) 62
T_VOID (261) 63
CONST (262) 64 65
ASSIGN (263) 33 35 37 39 40
ADD_ASSIGN (264) 41
SUB_ASSIGN (265) 42
MUL_ASSIGN (266) 43
DIV_ASSIGN (267) 44
EQ (268) 32
NOT_EQ (269) 31
LESS_THAN (270) 28
LESS_EQ (271) 27
MORE_THAN (272) 30
MORE_EQ (273) 29
AND (274) 24
OR (275) 25
NOT (276) 26
ADD (277) 18
SUB (278) 19 23
MUL (279) 20 37 38
DIV (280) 21
MOD (281) 22
SELF_ADD (282) 45
SELF_SUB (283) 46
SEMICOLON (284) 5 6 7 8 59
COMMA (285) 35 36 47 48
DOT (286)
LPAREN (287) 1 17 47 48 56 57 58 59
RPAREN (288) 1 17 47 48 56 57 58 59
LBRACE (289) 1 10
RBRACE (290) 1 10
LMPAREN (291) 72 73
RMPAREN (292) 72 73
IDENTIFIER (293) 72 74
INTEGER_H (294) 66
INTEGER_DP (295) 70 72 73
INTEGER_DN (296) 71
INTEGER_O (297) 68
INTEGER_B (298) 69
CHAR (299) 14
BOOL (300) 16
STRING (301) 15 47 48
MAIN (302) 1
RETURN (303)
FOR (304) 59
WHILE (305) 58
IF (306) 56 57
ELSE (307) 57
ELSE_IF (308)
PRINTF (309) 47
SCANF (310) 48
b_OR (311)
b_NOR (312)
b_AND (313) 37 39 48
UMINUS (314)
b_NOT (315)
pre_SELF_ADD (316)
pre_SELF_SUB (317)
GET_ADDRESS (318)
POINTER (319)


Nonterminals, with rules where they appear

$accept (65)
    左： 0
program (66)
    左： 1, 右： 0
fake_1 (67)
    左： 2, 右： 1
statements (68)
    左： 3 4, 右： 1 4 10
statement (69)
    左： 5 6 7 8 9 10, 右： 3 4 56 57 58 59
fake_2 (70)
    左： 11, 右： 10
expr (71)
    左： 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30
    31 32, 右： 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33
    35 37 40 41 42 43 44 45 46 47 48 52 56 57 58
decl_stmt (72)
    左： 33 34 35 36 37 38 39, 右： 6 35 36 49
assign_stmt (73)
    左： 40 41 42 43 44 45 46, 右： 7 50 54
IO_stmt (74)
    左： 47 48, 右： 8
for_expr_1 (75)
    左： 49 50 51, 右： 59
for_expr_2 (76)
    左： 52 53, 右： 59
for_expr_3 (77)
    左： 54 55, 右： 59
if_else_while_for_stmt (78)
    左： 56 57 58 59, 右： 9
Type (79)
    左： 60 61 62 63 64 65, 右： 1 33 34 37 38 39
INT_CONST (80)
    左： 66 67 68 69, 右： 13
INTEGER_D (81)
    左： 70 71, 右： 67
ARRAY (82)
    左： 72 73, 右： 73 75
ID (83)
    左： 74 75, 右： 12 33 34 35 36 37 38 39 40 41 42 43 44


State 0

    0 $accept: . program $end

    T_INT   shift, and go to state 1
    T_CHAR  shift, and go to state 2
    T_BOOL  shift, and go to state 3
    T_VOID  shift, and go to state 4
    CONST   shift, and go to state 5

    program  转到状态 6
    Type     转到状态 7


State 1

   60 Type: T_INT .

    $default  reduce using rule 60 (Type)


State 2

   61 Type: T_CHAR .

    $default  reduce using rule 61 (Type)


State 3

   62 Type: T_BOOL .

    $default  reduce using rule 62 (Type)


State 4

   63 Type: T_VOID .

    $default  reduce using rule 63 (Type)


State 5

   64 Type: CONST . T_INT
   65     | CONST . T_CHAR

    T_INT   shift, and go to state 8
    T_CHAR  shift, and go to state 9


State 6

    0 $accept: program . $end

    $end  shift, and go to state 10


State 7

    1 program: Type . MAIN LPAREN RPAREN LBRACE fake_1 statements RBRACE

    MAIN  shift, and go to state 11


State 8

   64 Type: CONST T_INT .

    $default  reduce using rule 64 (Type)


State 9

   65 Type: CONST T_CHAR .

    $default  reduce using rule 65 (Type)


State 10

    0 $accept: program $end .

    $default  接受


State 11

    1 program: Type MAIN . LPAREN RPAREN LBRACE fake_1 statements RBRACE

    LPAREN  shift, and go to state 12


State 12

    1 program: Type MAIN LPAREN . RPAREN LBRACE fake_1 statements RBRACE

    RPAREN  shift, and go to state 13


State 13

    1 program: Type MAIN LPAREN RPAREN . LBRACE fake_1 statements RBRACE

    LBRACE  shift, and go to state 14


State 14

    1 program: Type MAIN LPAREN RPAREN LBRACE . fake_1 statements RBRACE

    $default  reduce using rule 2 (fake_1)

    fake_1  转到状态 15


State 15

    1 program: Type MAIN LPAREN RPAREN LBRACE fake_1 . statements RBRACE

    T_INT       shift, and go to state 1
    T_CHAR      shift, and go to state 2
    T_BOOL      shift, and go to state 3
    T_VOID      shift, and go to state 4
    CONST       shift, and go to state 5
    NOT         shift, and go to state 16
    SUB         shift, and go to state 17
    SEMICOLON   shift, and go to state 18
    LPAREN      shift, and go to state 19
    LBRACE      shift, and go to state 20
    IDENTIFIER  shift, and go to state 21
    INTEGER_H   shift, and go to state 22
    INTEGER_DP  shift, and go to state 23
    INTEGER_DN  shift, and go to state 24
    INTEGER_O   shift, and go to state 25
    INTEGER_B   shift, and go to state 26
    CHAR        shift, and go to state 27
    BOOL        shift, and go to state 28
    STRING      shift, and go to state 29
    FOR         shift, and go to state 30
    WHILE       shift, and go to state 31
    IF          shift, and go to state 32
    PRINTF      shift, and go to state 33
    SCANF       shift, and go to state 34

    statements              转到状态 35
    statement               转到状态 36
    expr                    转到状态 37
    decl_stmt               转到状态 38
    assign_stmt             转到状态 39
    IO_stmt                 转到状态 40
    if_else_while_for_stmt  转到状态 41
    Type                    转到状态 42
    INT_CONST               转到状态 43
    INTEGER_D               转到状态 44
    ARRAY                   转到状态 45
    ID                      转到状态 46


State 16

   26 expr: NOT . expr

    NOT         shift, and go to state 16
    SUB         shift, and go to state 17
    LPAREN      shift, and go to state 19
    IDENTIFIER  shift, and go to state 21
    INTEGER_H   shift, and go to state 22
    INTEGER_DP  shift, and go to state 23
    INTEGER_DN  shift, and go to state 24
    INTEGER_O   shift, and go to state 25
    INTEGER_B   shift, and go to state 26
    CHAR        shift, and go to state 27
    BOOL        shift, and go to state 28
    STRING      shift, and go to state 29

    expr       转到状态 47
    INT_CONST  转到状态 43
    INTEGER_D  转到状态 44
    ARRAY      转到状态 45
    ID         转到状态 48


State 17

   23 expr: SUB . expr

    NOT         shift, and go to state 16
    SUB         shift, and go to state 17
    LPAREN      shift, and go to state 19
    IDENTIFIER  shift, and go to state 21
    INTEGER_H   shift, and go to state 22
    INTEGER_DP  shift, and go to state 23
    INTEGER_DN  shift, and go to state 24
    INTEGER_O   shift, and go to state 25
    INTEGER_B   shift, and go to state 26
    CHAR        shift, and go to state 27
    BOOL        shift, and go to state 28
    STRING      shift, and go to state 29

    expr       转到状态 49
    INT_CONST  转到状态 43
    INTEGER_D  转到状态 44
    ARRAY      转到状态 45
    ID         转到状态 48


State 18

    5 statement: SEMICOLON .

    $default  reduce using rule 5 (statement)


State 19

   17 expr: LPAREN . expr RPAREN

    NOT         shift, and go to state 16
    SUB         shift, and go to state 17
    LPAREN      shift, and go to state 19
    IDENTIFIER  shift, and go to state 21
    INTEGER_H   shift, and go to state 22
    INTEGER_DP  shift, and go to state 23
    INTEGER_DN  shift, and go to state 24
    INTEGER_O   shift, and go to state 25
    INTEGER_B   shift, and go to state 26
    CHAR        shift, and go to state 27
    BOOL        shift, and go to state 28
    STRING      shift, and go to state 29

    expr       转到状态 50
    INT_CONST  转到状态 43
    INTEGER_D  转到状态 44
    ARRAY      转到状态 45
    ID         转到状态 48


State 20

   10 statement: LBRACE . fake_2 statements RBRACE

    $default  reduce using rule 11 (fake_2)

    fake_2  转到状态 51


State 21

   72 ARRAY: IDENTIFIER . LMPAREN INTEGER_DP RMPAREN
   74 ID: IDENTIFIER .

    LMPAREN  shift, and go to state 52

    $default  reduce using rule 74 (ID)


State 22

   66 INT_CONST: INTEGER_H .

    $default  reduce using rule 66 (INT_CONST)


State 23

   70 INTEGER_D: INTEGER_DP .

    $default  reduce using rule 70 (INTEGER_D)


State 24

   71 INTEGER_D: INTEGER_DN .

    $default  reduce using rule 71 (INTEGER_D)


State 25

   68 INT_CONST: INTEGER_O .

    $default  reduce using rule 68 (INT_CONST)


State 26

   69 INT_CONST: INTEGER_B .

    $default  reduce using rule 69 (INT_CONST)


State 27

   14 expr: CHAR .

    $default  reduce using rule 14 (expr)


State 28

   16 expr: BOOL .

    $default  reduce using rule 16 (expr)


State 29

   15 expr: STRING .

    $default  reduce using rule 15 (expr)


State 30

   59 if_else_while_for_stmt: FOR . LPAREN for_expr_1 SEMICOLON for_expr_2 SEMICOLON for_expr_3 RPAREN statement

    LPAREN  shift, and go to state 53


State 31

   58 if_else_while_for_stmt: WHILE . LPAREN expr RPAREN statement

    LPAREN  shift, and go to state 54


State 32

   56 if_else_while_for_stmt: IF . LPAREN expr RPAREN statement
   57                       | IF . LPAREN expr RPAREN statement ELSE statement

    LPAREN  shift, and go to state 55


State 33

   47 IO_stmt: PRINTF . LPAREN STRING COMMA expr RPAREN

    LPAREN  shift, and go to state 56


State 34

   48 IO_stmt: SCANF . LPAREN STRING COMMA b_AND expr RPAREN

    LPAREN  shift, and go to state 57


State 35

    1 program: Type MAIN LPAREN RPAREN LBRACE fake_1 statements . RBRACE
    4 statements: statements . statement

    T_INT       shift, and go to state 1
    T_CHAR      shift, and go to state 2
    T_BOOL      shift, and go to state 3
    T_VOID      shift, and go to state 4
    CONST       shift, and go to state 5
    NOT         shift, and go to state 16
    SUB         shift, and go to state 17
    SEMICOLON   shift, and go to state 18
    LPAREN      shift, and go to state 19
    LBRACE      shift, and go to state 20
    RBRACE      shift, and go to state 58
    IDENTIFIER  shift, and go to state 21
    INTEGER_H   shift, and go to state 22
    INTEGER_DP  shift, and go to state 23
    INTEGER_DN  shift, and go to state 24
    INTEGER_O   shift, and go to state 25
    INTEGER_B   shift, and go to state 26
    CHAR        shift, and go to state 27
    BOOL        shift, and go to state 28
    STRING      shift, and go to state 29
    FOR         shift, and go to state 30
    WHILE       shift, and go to state 31
    IF          shift, and go to state 32
    PRINTF      shift, and go to state 33
    SCANF       shift, and go to state 34

    statement               转到状态 59
    expr                    转到状态 37
    decl_stmt               转到状态 38
    assign_stmt             转到状态 39
    IO_stmt                 转到状态 40
    if_else_while_for_stmt  转到状态 41
    Type                    转到状态 42
    INT_CONST               转到状态 43
    INTEGER_D               转到状态 44
    ARRAY                   转到状态 45
    ID                      转到状态 46


State 36

    3 statements: statement .

    $default  reduce using rule 3 (statements)


State 37

   18 expr: expr . ADD expr
   19     | expr . SUB expr
   20     | expr . MUL expr
   21     | expr . DIV expr
   22     | expr . MOD expr
   24     | expr . AND expr
   25     | expr . OR expr
   27     | expr . LESS_EQ expr
   28     | expr . LESS_THAN expr
   29     | expr . MORE_EQ expr
   30     | expr . MORE_THAN expr
   31     | expr . NOT_EQ expr
   32     | expr . EQ expr
   45 assign_stmt: expr . SELF_ADD
   46            | expr . SELF_SUB

    EQ         shift, and go to state 60
    NOT_EQ     shift, and go to state 61
    LESS_THAN  shift, and go to state 62
    LESS_EQ    shift, and go to state 63
    MORE_THAN  shift, and go to state 64
    MORE_EQ    shift, and go to state 65
    AND        shift, and go to state 66
    OR         shift, and go to state 67
    ADD        shift, and go to state 68
    SUB        shift, and go to state 69
    MUL        shift, and go to state 70
    DIV        shift, and go to state 71
    MOD        shift, and go to state 72
    SELF_ADD   shift, and go to state 73
    SELF_SUB   shift, and go to state 74


State 38

    6 statement: decl_stmt . SEMICOLON
   35 decl_stmt: decl_stmt . COMMA ID ASSIGN expr
   36          | decl_stmt . COMMA ID

    SEMICOLON  shift, and go to state 75
    COMMA      shift, and go to state 76


State 39

    7 statement: assign_stmt . SEMICOLON

    SEMICOLON  shift, and go to state 77


State 40

    8 statement: IO_stmt . SEMICOLON

    SEMICOLON  shift, and go to state 78


State 41

    9 statement: if_else_while_for_stmt .

    $default  reduce using rule 9 (statement)


State 42

   33 decl_stmt: Type . ID ASSIGN expr
   34          | Type . ID
   37          | Type . MUL ID ASSIGN b_AND expr
   38          | Type . MUL ID
   39          | Type . b_AND ID ASSIGN ID

    MUL         shift, and go to state 79
    IDENTIFIER  shift, and go to state 21
    b_AND       shift, and go to state 80

    ARRAY  转到状态 45
    ID     转到状态 81


State 43

   13 expr: INT_CONST .

    $default  reduce using rule 13 (expr)


State 44

   67 INT_CONST: INTEGER_D .

    $default  reduce using rule 67 (INT_CONST)


State 45

   73 ARRAY: ARRAY . LMPAREN INTEGER_DP RMPAREN
   75 ID: ARRAY .

    LMPAREN  shift, and go to state 82

    $default  reduce using rule 75 (ID)


State 46

   12 expr: ID .
   40 assign_stmt: ID . ASSIGN expr
   41            | ID . ADD_ASSIGN expr
   42            | ID . SUB_ASSIGN expr
   43            | ID . MUL_ASSIGN expr
   44            | ID . DIV_ASSIGN expr

    ASSIGN      shift, and go to state 83
    ADD_ASSIGN  shift, and go to state 84
    SUB_ASSIGN  shift, and go to state 85
    MUL_ASSIGN  shift, and go to state 86
    DIV_ASSIGN  shift, and go to state 87

    $default  reduce using rule 12 (expr)


State 47

   18 expr: expr . ADD expr
   19     | expr . SUB expr
   20     | expr . MUL expr
   21     | expr . DIV expr
   22     | expr . MOD expr
   24     | expr . AND expr
   25     | expr . OR expr
   26     | NOT expr .
   27     | expr . LESS_EQ expr
   28     | expr . LESS_THAN expr
   29     | expr . MORE_EQ expr
   30     | expr . MORE_THAN expr
   31     | expr . NOT_EQ expr
   32     | expr . EQ expr

    $default  reduce using rule 26 (expr)


State 48

   12 expr: ID .

    $default  reduce using rule 12 (expr)


State 49

   18 expr: expr . ADD expr
   19     | expr . SUB expr
   20     | expr . MUL expr
   21     | expr . DIV expr
   22     | expr . MOD expr
   23     | SUB expr .
   24     | expr . AND expr
   25     | expr . OR expr
   27     | expr . LESS_EQ expr
   28     | expr . LESS_THAN expr
   29     | expr . MORE_EQ expr
   30     | expr . MORE_THAN expr
   31     | expr . NOT_EQ expr
   32     | expr . EQ expr

    $default  reduce using rule 23 (expr)


State 50

   17 expr: LPAREN expr . RPAREN
   18     | expr . ADD expr
   19     | expr . SUB expr
   20     | expr . MUL expr
   21     | expr . DIV expr
   22     | expr . MOD expr
   24     | expr . AND expr
   25     | expr . OR expr
   27     | expr . LESS_EQ expr
   28     | expr . LESS_THAN expr
   29     | expr . MORE_EQ expr
   30     | expr . MORE_THAN expr
   31     | expr . NOT_EQ expr
   32     | expr . EQ expr

    EQ         shift, and go to state 60
    NOT_EQ     shift, and go to state 61
    LESS_THAN  shift, and go to state 62
    LESS_EQ    shift, and go to state 63
    MORE_THAN  shift, and go to state 64
    MORE_EQ    shift, and go to state 65
    AND        shift, and go to state 66
    OR         shift, and go to state 67
    ADD        shift, and go to state 68
    SUB        shift, and go to state 69
    MUL        shift, and go to state 70
    DIV        shift, and go to state 71
    MOD        shift, and go to state 72
    RPAREN     shift, and go to state 88


State 51

   10 statement: LBRACE fake_2 . statements RBRACE

    T_INT       shift, and go to state 1
    T_CHAR      shift, and go to state 2
    T_BOOL      shift, and go to state 3
    T_VOID      shift, and go to state 4
    CONST       shift, and go to state 5
    NOT         shift, and go to state 16
    SUB         shift, and go to state 17
    SEMICOLON   shift, and go to state 18
    LPAREN      shift, and go to state 19
    LBRACE      shift, and go to state 20
    IDENTIFIER  shift, and go to state 21
    INTEGER_H   shift, and go to state 22
    INTEGER_DP  shift, and go to state 23
    INTEGER_DN  shift, and go to state 24
    INTEGER_O   shift, and go to state 25
    INTEGER_B   shift, and go to state 26
    CHAR        shift, and go to state 27
    BOOL        shift, and go to state 28
    STRING      shift, and go to state 29
    FOR         shift, and go to state 30
    WHILE       shift, and go to state 31
    IF          shift, and go to state 32
    PRINTF      shift, and go to state 33
    SCANF       shift, and go to state 34

    statements              转到状态 89
    statement               转到状态 36
    expr                    转到状态 37
    decl_stmt               转到状态 38
    assign_stmt             转到状态 39
    IO_stmt                 转到状态 40
    if_else_while_for_stmt  转到状态 41
    Type                    转到状态 42
    INT_CONST               转到状态 43
    INTEGER_D               转到状态 44
    ARRAY                   转到状态 45
    ID                      转到状态 46


State 52

   72 ARRAY: IDENTIFIER LMPAREN . INTEGER_DP RMPAREN

    INTEGER_DP  shift, and go to state 90


State 53

   59 if_else_while_for_stmt: FOR LPAREN . for_expr_1 SEMICOLON for_expr_2 SEMICOLON for_expr_3 RPAREN statement

    T_INT       shift, and go to state 1
    T_CHAR      shift, and go to state 2
    T_BOOL      shift, and go to state 3
    T_VOID      shift, and go to state 4
    CONST       shift, and go to state 5
    NOT         shift, and go to state 16
    SUB         shift, and go to state 17
    LPAREN      shift, and go to state 19
    IDENTIFIER  shift, and go to state 21
    INTEGER_H   shift, and go to state 22
    INTEGER_DP  shift, and go to state 23
    INTEGER_DN  shift, and go to state 24
    INTEGER_O   shift, and go to state 25
    INTEGER_B   shift, and go to state 26
    CHAR        shift, and go to state 27
    BOOL        shift, and go to state 28
    STRING      shift, and go to state 29

    $default  reduce using rule 51 (for_expr_1)

    expr         转到状态 37
    decl_stmt    转到状态 91
    assign_stmt  转到状态 92
    for_expr_1   转到状态 93
    Type         转到状态 42
    INT_CONST    转到状态 43
    INTEGER_D    转到状态 44
    ARRAY        转到状态 45
    ID           转到状态 46


State 54

   58 if_else_while_for_stmt: WHILE LPAREN . expr RPAREN statement

    NOT         shift, and go to state 16
    SUB         shift, and go to state 17
    LPAREN      shift, and go to state 19
    IDENTIFIER  shift, and go to state 21
    INTEGER_H   shift, and go to state 22
    INTEGER_DP  shift, and go to state 23
    INTEGER_DN  shift, and go to state 24
    INTEGER_O   shift, and go to state 25
    INTEGER_B   shift, and go to state 26
    CHAR        shift, and go to state 27
    BOOL        shift, and go to state 28
    STRING      shift, and go to state 29

    expr       转到状态 94
    INT_CONST  转到状态 43
    INTEGER_D  转到状态 44
    ARRAY      转到状态 45
    ID         转到状态 48


State 55

   56 if_else_while_for_stmt: IF LPAREN . expr RPAREN statement
   57                       | IF LPAREN . expr RPAREN statement ELSE statement

    NOT         shift, and go to state 16
    SUB         shift, and go to state 17
    LPAREN      shift, and go to state 19
    IDENTIFIER  shift, and go to state 21
    INTEGER_H   shift, and go to state 22
    INTEGER_DP  shift, and go to state 23
    INTEGER_DN  shift, and go to state 24
    INTEGER_O   shift, and go to state 25
    INTEGER_B   shift, and go to state 26
    CHAR        shift, and go to state 27
    BOOL        shift, and go to state 28
    STRING      shift, and go to state 29

    expr       转到状态 95
    INT_CONST  转到状态 43
    INTEGER_D  转到状态 44
    ARRAY      转到状态 45
    ID         转到状态 48


State 56

   47 IO_stmt: PRINTF LPAREN . STRING COMMA expr RPAREN

    STRING  shift, and go to state 96


State 57

   48 IO_stmt: SCANF LPAREN . STRING COMMA b_AND expr RPAREN

    STRING  shift, and go to state 97


State 58

    1 program: Type MAIN LPAREN RPAREN LBRACE fake_1 statements RBRACE .

    $default  reduce using rule 1 (program)


State 59

    4 statements: statements statement .

    $default  reduce using rule 4 (statements)


State 60

   32 expr: expr EQ . expr

    NOT         shift, and go to state 16
    SUB         shift, and go to state 17
    LPAREN      shift, and go to state 19
    IDENTIFIER  shift, and go to state 21
    INTEGER_H   shift, and go to state 22
    INTEGER_DP  shift, and go to state 23
    INTEGER_DN  shift, and go to state 24
    INTEGER_O   shift, and go to state 25
    INTEGER_B   shift, and go to state 26
    CHAR        shift, and go to state 27
    BOOL        shift, and go to state 28
    STRING      shift, and go to state 29

    expr       转到状态 98
    INT_CONST  转到状态 43
    INTEGER_D  转到状态 44
    ARRAY      转到状态 45
    ID         转到状态 48


State 61

   31 expr: expr NOT_EQ . expr

    NOT         shift, and go to state 16
    SUB         shift, and go to state 17
    LPAREN      shift, and go to state 19
    IDENTIFIER  shift, and go to state 21
    INTEGER_H   shift, and go to state 22
    INTEGER_DP  shift, and go to state 23
    INTEGER_DN  shift, and go to state 24
    INTEGER_O   shift, and go to state 25
    INTEGER_B   shift, and go to state 26
    CHAR        shift, and go to state 27
    BOOL        shift, and go to state 28
    STRING      shift, and go to state 29

    expr       转到状态 99
    INT_CONST  转到状态 43
    INTEGER_D  转到状态 44
    ARRAY      转到状态 45
    ID         转到状态 48


State 62

   28 expr: expr LESS_THAN . expr

    NOT         shift, and go to state 16
    SUB         shift, and go to state 17
    LPAREN      shift, and go to state 19
    IDENTIFIER  shift, and go to state 21
    INTEGER_H   shift, and go to state 22
    INTEGER_DP  shift, and go to state 23
    INTEGER_DN  shift, and go to state 24
    INTEGER_O   shift, and go to state 25
    INTEGER_B   shift, and go to state 26
    CHAR        shift, and go to state 27
    BOOL        shift, and go to state 28
    STRING      shift, and go to state 29

    expr       转到状态 100
    INT_CONST  转到状态 43
    INTEGER_D  转到状态 44
    ARRAY      转到状态 45
    ID         转到状态 48


State 63

   27 expr: expr LESS_EQ . expr

    NOT         shift, and go to state 16
    SUB         shift, and go to state 17
    LPAREN      shift, and go to state 19
    IDENTIFIER  shift, and go to state 21
    INTEGER_H   shift, and go to state 22
    INTEGER_DP  shift, and go to state 23
    INTEGER_DN  shift, and go to state 24
    INTEGER_O   shift, and go to state 25
    INTEGER_B   shift, and go to state 26
    CHAR        shift, and go to state 27
    BOOL        shift, and go to state 28
    STRING      shift, and go to state 29

    expr       转到状态 101
    INT_CONST  转到状态 43
    INTEGER_D  转到状态 44
    ARRAY      转到状态 45
    ID         转到状态 48


State 64

   30 expr: expr MORE_THAN . expr

    NOT         shift, and go to state 16
    SUB         shift, and go to state 17
    LPAREN      shift, and go to state 19
    IDENTIFIER  shift, and go to state 21
    INTEGER_H   shift, and go to state 22
    INTEGER_DP  shift, and go to state 23
    INTEGER_DN  shift, and go to state 24
    INTEGER_O   shift, and go to state 25
    INTEGER_B   shift, and go to state 26
    CHAR        shift, and go to state 27
    BOOL        shift, and go to state 28
    STRING      shift, and go to state 29

    expr       转到状态 102
    INT_CONST  转到状态 43
    INTEGER_D  转到状态 44
    ARRAY      转到状态 45
    ID         转到状态 48


State 65

   29 expr: expr MORE_EQ . expr

    NOT         shift, and go to state 16
    SUB         shift, and go to state 17
    LPAREN      shift, and go to state 19
    IDENTIFIER  shift, and go to state 21
    INTEGER_H   shift, and go to state 22
    INTEGER_DP  shift, and go to state 23
    INTEGER_DN  shift, and go to state 24
    INTEGER_O   shift, and go to state 25
    INTEGER_B   shift, and go to state 26
    CHAR        shift, and go to state 27
    BOOL        shift, and go to state 28
    STRING      shift, and go to state 29

    expr       转到状态 103
    INT_CONST  转到状态 43
    INTEGER_D  转到状态 44
    ARRAY      转到状态 45
    ID         转到状态 48


State 66

   24 expr: expr AND . expr

    NOT         shift, and go to state 16
    SUB         shift, and go to state 17
    LPAREN      shift, and go to state 19
    IDENTIFIER  shift, and go to state 21
    INTEGER_H   shift, and go to state 22
    INTEGER_DP  shift, and go to state 23
    INTEGER_DN  shift, and go to state 24
    INTEGER_O   shift, and go to state 25
    INTEGER_B   shift, and go to state 26
    CHAR        shift, and go to state 27
    BOOL        shift, and go to state 28
    STRING      shift, and go to state 29

    expr       转到状态 104
    INT_CONST  转到状态 43
    INTEGER_D  转到状态 44
    ARRAY      转到状态 45
    ID         转到状态 48


State 67

   25 expr: expr OR . expr

    NOT         shift, and go to state 16
    SUB         shift, and go to state 17
    LPAREN      shift, and go to state 19
    IDENTIFIER  shift, and go to state 21
    INTEGER_H   shift, and go to state 22
    INTEGER_DP  shift, and go to state 23
    INTEGER_DN  shift, and go to state 24
    INTEGER_O   shift, and go to state 25
    INTEGER_B   shift, and go to state 26
    CHAR        shift, and go to state 27
    BOOL        shift, and go to state 28
    STRING      shift, and go to state 29

    expr       转到状态 105
    INT_CONST  转到状态 43
    INTEGER_D  转到状态 44
    ARRAY      转到状态 45
    ID         转到状态 48


State 68

   18 expr: expr ADD . expr

    NOT         shift, and go to state 16
    SUB         shift, and go to state 17
    LPAREN      shift, and go to state 19
    IDENTIFIER  shift, and go to state 21
    INTEGER_H   shift, and go to state 22
    INTEGER_DP  shift, and go to state 23
    INTEGER_DN  shift, and go to state 24
    INTEGER_O   shift, and go to state 25
    INTEGER_B   shift, and go to state 26
    CHAR        shift, and go to state 27
    BOOL        shift, and go to state 28
    STRING      shift, and go to state 29

    expr       转到状态 106
    INT_CONST  转到状态 43
    INTEGER_D  转到状态 44
    ARRAY      转到状态 45
    ID         转到状态 48


State 69

   19 expr: expr SUB . expr

    NOT         shift, and go to state 16
    SUB         shift, and go to state 17
    LPAREN      shift, and go to state 19
    IDENTIFIER  shift, and go to state 21
    INTEGER_H   shift, and go to state 22
    INTEGER_DP  shift, and go to state 23
    INTEGER_DN  shift, and go to state 24
    INTEGER_O   shift, and go to state 25
    INTEGER_B   shift, and go to state 26
    CHAR        shift, and go to state 27
    BOOL        shift, and go to state 28
    STRING      shift, and go to state 29

    expr       转到状态 107
    INT_CONST  转到状态 43
    INTEGER_D  转到状态 44
    ARRAY      转到状态 45
    ID         转到状态 48


State 70

   20 expr: expr MUL . expr

    NOT         shift, and go to state 16
    SUB         shift, and go to state 17
    LPAREN      shift, and go to state 19
    IDENTIFIER  shift, and go to state 21
    INTEGER_H   shift, and go to state 22
    INTEGER_DP  shift, and go to state 23
    INTEGER_DN  shift, and go to state 24
    INTEGER_O   shift, and go to state 25
    INTEGER_B   shift, and go to state 26
    CHAR        shift, and go to state 27
    BOOL        shift, and go to state 28
    STRING      shift, and go to state 29

    expr       转到状态 108
    INT_CONST  转到状态 43
    INTEGER_D  转到状态 44
    ARRAY      转到状态 45
    ID         转到状态 48


State 71

   21 expr: expr DIV . expr

    NOT         shift, and go to state 16
    SUB         shift, and go to state 17
    LPAREN      shift, and go to state 19
    IDENTIFIER  shift, and go to state 21
    INTEGER_H   shift, and go to state 22
    INTEGER_DP  shift, and go to state 23
    INTEGER_DN  shift, and go to state 24
    INTEGER_O   shift, and go to state 25
    INTEGER_B   shift, and go to state 26
    CHAR        shift, and go to state 27
    BOOL        shift, and go to state 28
    STRING      shift, and go to state 29

    expr       转到状态 109
    INT_CONST  转到状态 43
    INTEGER_D  转到状态 44
    ARRAY      转到状态 45
    ID         转到状态 48


State 72

   22 expr: expr MOD . expr

    NOT         shift, and go to state 16
    SUB         shift, and go to state 17
    LPAREN      shift, and go to state 19
    IDENTIFIER  shift, and go to state 21
    INTEGER_H   shift, and go to state 22
    INTEGER_DP  shift, and go to state 23
    INTEGER_DN  shift, and go to state 24
    INTEGER_O   shift, and go to state 25
    INTEGER_B   shift, and go to state 26
    CHAR        shift, and go to state 27
    BOOL        shift, and go to state 28
    STRING      shift, and go to state 29

    expr       转到状态 110
    INT_CONST  转到状态 43
    INTEGER_D  转到状态 44
    ARRAY      转到状态 45
    ID         转到状态 48


State 73

   45 assign_stmt: expr SELF_ADD .

    $default  reduce using rule 45 (assign_stmt)


State 74

   46 assign_stmt: expr SELF_SUB .
